--- a/index.html
+++ b/index.html
@@ -39,11 +39,51 @@
                     </ul>
 
                 </div>
-                <div class="btn btn-ghost mx-1 text-[#8bc34a] font-bold " active><a>$0.00<ion-icon name="cart-outline"
-                            class="px-3 text-lg"></ion-icon></a>
+                <div class="btn btn-ghost mx-1 text-[#8bc34a] font-bold " onclick="my_model.showModal()" active>
+                    <a>$0.00<ion-icon name="cart-outline" class="px-3 text-lg"></ion-icon></a>
                 </div>
-                <div class="btn btn-ghost text-lg hidden lg:flex"><a><ion-icon name="person-circle-outline"
-                            class="text-2xl"></ion-icon></a></div>
+                <button class="btn btn-ghost text-lg hidden lg:flex"><a href="/login.html"><ion-icon
+                            name="person-circle-outline" class="text-2xl"></ion-icon></a>
+
+                </button>
+                <dialog id="my_model" class="modal ">
+                    <div class="modal-box ">
+                        <form action="" method="dialog">
+                            <button class="btn btn-sm btn-circle btn-ghost absolute right-2 top-4">✕</button>
+                        </form>
+                        <h3 class="font-bold text-lg border-b-2 pb-3">Shopping Cart</h3>
+                        <div class="flex flex-row  my-3 mx-auto justify-start ">
+                            <div class="mx-3 rounded-lg ">
+                                <img src="./images/coffee-asorted-300x300.jpg" alt="" class="w-[100px] h-[75px] ">
+                            </div>
+                            <div class="flex flex-col  justify-center px-3">
+                                <p class="text-md font-semibold">Hand Sanitizer</p>
+                                <p>1 × £15.00</p>
+                            </div>
+                        </div>
+                        <div class="flex flex-row  my-3 mx-auto justify-start ">
+                            <div class="mx-3 ">
+                                <img src="./images/coffee-asorted-300x300.jpg" alt="" class="w-[100px] h-[75px] ">
+                            </div>
+                            <div class="flex flex-col  justify-center px-3">
+                                <p class="text-md font-semibold">Hand Sanitizer</p>
+                                <p>1 × £15.00</p>
+                            </div>
+                        </div>
+                        <div class="border-t-2 py-2">
+                            <div class="flex flex-row justify-between text-lg font-medium tracking-wider">
+                                <p>Subtotal:</p>
+                                <p> $30.00</p>
+                            </div>
+                        </div>
+                        <div class="flex border-t-2  py-4 justify-end ">
+                            <div class="btn text-white text-xl font-semibold  bg-[#8bc34a]">
+                                <button>Checkout</button>
+                            </div>
+                        </div>
+                    </div>
+                </dialog>
+
                 <div class="dropdown dropdown-end ">
                     <div tabindex="0" role="button" class="btn btn-ghost lg:hidden bg-[#8bc34a]">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
@@ -54,7 +94,8 @@
                     </div>
                     <ul tabindex="0"
                         class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 text-end">
-                        <li class="text-center text-lg"><a><ion-icon name="person-circle-outline"></ion-icon></a></li>
+                        <li class="text-center text-lg"><a href="/login.html"><ion-icon class="text-2xl"
+                                    name="person-circle-outline"></ion-icon></a></li>
                         <li class="hover:text-[#8bc34a] hover:font-bold"><a>EveryThing</a></li>
                         <li class="hover:text-[#8bc34a] hover:font-bold">
                             <a>Groceries</a>
