--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
         <div class="navbar bg-[#fff]">
             <div class="navbar-start my-3 ">
 
-                <a class="w-[150px] h-[71px] mx-5 "><img src="./images/organic-store-logo5.svg" alt=""></a>
+                <a class="w-[150px] h-[71px] mx-5 " href="/index.html"><img src="./images/organic-store-logo5.svg"
+                        alt=""></a>
                 <div class=" hidden lg:flex ">
                     <ul class="menu menu-horizontal px-1 text-lg">
-                        <li class="hover:text-[#8bc34a] hover:font-bold"><a>EveryThing</a></li>
+                        <li class="hover:text-[#8bc34a] hover:font-bold"><a href="/everyThing.html">EveryThing</a></li>
                         <li class="hover:text-[#8bc34a] hover:font-bold">
-                            <a> Groceries</a>
+                            <a href="/grocerice.html"> Groceries</a>
                         </li>
-                        <li class="hover:text-[#8bc34a] hover:font-bold "><a>Juice</a></li>
+                        <li class="hover:text-[#8bc34a] hover:font-bold "><a href="/Juice.html">Juice</a></li>
                     </ul>
                 </div>
             </div>
@@ -32,9 +33,9 @@
             <div class="navbar-end">
                 <div class=" hidden lg:flex ">
                     <ul class="menu menu-horizontal px-1 text-lg">
-                        <li class="hover:text-[#8bc34a] hover:font-bold"><a>About</a></li>
+                        <li class="hover:text-[#8bc34a] hover:font-bold"><a href="/about.html">About</a></li>
                         <li class="hover:text-[#8bc34a] hover:font-bold">
-                            <a> Contact</a>
+                            <a href="/contact.html"> Contact</a>
                         </li>
                     </ul>
 
@@ -96,15 +97,15 @@
                         class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 text-end">
                         <li class="text-center text-lg"><a href="/login.html"><ion-icon class="text-2xl"
                                     name="person-circle-outline"></ion-icon></a></li>
-                        <li class="hover:text-[#8bc34a] hover:font-bold"><a>EveryThing</a></li>
+                        <li class="hover:text-[#8bc34a] hover:font-bold"><a href="/everyThing.html">EveryThing</a></li>
                         <li class="hover:text-[#8bc34a] hover:font-bold">
-                            <a>Groceries</a>
+                            <a href="/grocerice.html">Groceries</a>
 
                         </li>
-                        <li class="hover:text-[#8bc34a] hover:font-bold"><a>Juice</a></li>
-                        <li class="hover:text-[#8bc34a] hover:font-bold"><a>About</a></li>
+                        <li class="hover:text-[#8bc34a] hover:font-bold"><a href="/Juice.html">Juice</a></li>
+                        <li class="hover:text-[#8bc34a] hover:font-bold"><a href="/about.html">About</a></li>
 
-                        <li class="hover:text-[#8bc34a] hover:font-bold"><a>Contact</a></li>
+                        <li class="hover:text-[#8bc34a] hover:font-bold"><a href="/contact.html">Contact</a></li>
 
                     </ul>
                 </div>
